[package]
name = "diorama-derive"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
parse-utils = { path = "../diorama-utils/parse-utils" }
diorama-core = { path = "../diorama-core" }

[lib]
crate-type = ["proc-macro"]
proc_macro = true